# compressonator

./: .gitattributes  .gitignore  .gitmodules  BuildCLI.bat  BuildGUI.bat  CMakeLists.txt  CleanCMP.bat  Compressonator_Root.props  LICENSE  README.md  SparseCheckoutCommon.sh  UseDefinitions.h  _clang-format  clang-tidy  cmakelists.txt  compressonator_root.props  fetch_common.bat  gstyle.bat  linux_build_apps.sh  readme.md  usedefinitions.h  vsbuild17.bat  vsbuild19.bat  vsbuild22.bat  vsbuildALL.bat  vsclean.bat  vsdev.bat
Applications/CompressonatorCLI/: CMakeLists.txt  CompressonatorCLI  CopyFiles.cmake
Applications/CompressonatorGUI/: CMakeLists.txt  CopyFiles.cmake
CMP_CompressonatorLib/: CMakeLists.txt  Common.h  Compress.cpp  Compressonator.cpp  Compressonator.h  CompressonatorLib.def  Version.h
CMP_CompressonatorLib/APC/: APC_Decode.cpp  APC_Decode.h  APC_Definitions.h  APC_Encode.cpp  APC_Encode.h  Codec_APC.cpp  Codec_APC.h
CMP_CompressonatorLib/ASTC/: ASTC_Encode_Kernel.cpp  ASTC_Encode_Kernel.h  ASTC_Host.cpp  ASTC_Library.h  Codec_ASTC.cpp
CMP_CompressonatorLib/ATC/: Codec_ATC.cpp  Codec_ATC_RGB.cpp  Codec_ATC_RGB.h  Codec_ATC_RGBA_Explicit.h
CMP_CompressonatorLib/ATI/: Codec_ATI1N.cpp  Codec_ATI1N.h  Codec_ATI2N_DXT5.h  Codec_ATI_TC.cpp
CMP_CompressonatorLib/BASIS/: Codec_BASIS.cpp  Codec_BASIS.h
CMP_CompressonatorLib/BC6H/: BC6H_Decode.cpp  BC6H_Definitions.cpp  BC6H_Definitions.h  BC6H_Encode.cpp  BC6H_Library.cpp  BC6H_Library.h  Codec_BC6H.cpp
CMP_CompressonatorLib/BC7/: 3dquant_constants.h  3dquant_vpc.cpp  3dquant_vpc.h  BC7_Decode.cpp  BC7_Decode.h  BC7_Encode.h  BC7_Library.cpp  BC7_Library.h  BC7_Partitions.cpp  BC7_utils.cpp  Codec_BC7.cpp  reconstruct.h
CMP_CompressonatorLib/Block/: Codec_Block.cpp  Codec_Block_4x4.cpp  Codec_Block_4x4.h  Codec_Block_8x8.cpp
CMP_CompressonatorLib/Buffer/: CodecBuffer.h  CodecBuffer_Block.cpp  CodecBuffer_Block.h  CodecBuffer_R16.cpp  CodecBuffer_R16F.cpp  CodecBuffer_R16F.h  CodecBuffer_R32.cpp  CodecBuffer_R32F.cpp  CodecBuffer_R32F.h  CodecBuffer_RG16.cpp  CodecBuffer_RG16F.cpp  CodecBuffer_RG16F.h  CodecBuffer_RG32.cpp  CodecBuffer_RG32.h  CodecBuffer_RG32F.h  CodecBuffer_RG8.h  CodecBuffer_RGB9995EF.cpp  CodecBuffer_RGBA16.cpp  CodecBuffer_RGBA16.h  CodecBuffer_RGBA16F.cpp  CodecBuffer_RGBA2101010.h  CodecBuffer_RGBA32.cpp  CodecBuffer_RGBA32.h  CodecBuffer_RGBA8888.cpp  Codecbuffer.cpp
CMP_CompressonatorLib/Common/: Codec.cpp  CommonTypes.h  Compress.h  debug.h
CMP_CompressonatorLib/DXT/: Codec_DXT3.cpp  Codec_DXT5_RBxG.h  Codec_DXT5_Swizzled.h  Codec_DXT5_xGBR.cpp  Codec_DXT5_xGxR.cpp  Codec_DXT5_xGxR.h  Codec_DXT5_xRBG.h
CMP_CompressonatorLib/DXTC/: Codec_DXTC.cpp  Codec_DXTC_Alpha.cpp  Codec_DXTC_RGBA.cpp
CMP_CompressonatorLib/ETC/: Codec_ETC2.cpp  Codec_ETC2.h  Codec_ETC2_RGB.cpp  Codec_ETC2_RGBA1.cpp  Codec_ETC_RGB.cpp  Codec_ETC_RGBA_Explicit.h  Codec_ETC_RGBA_Interpolated.cpp  etcpack.h
CMP_CompressonatorLib/GT/: Codec_GT.cpp  Codec_GT.h  Codec_GTCH.cpp  GTCH_Decode.h  GT_Decode.cpp  GT_Definitions.h
CMP_Core/: CMP_Core.def  CMakeLists.txt
CMP_Core/shaders/: BC1_Encode_kernel.cpp  BC1_Encode_kernel.h  BC2_Encode_kernel.cpp  BC2_Encode_kernel.h  BC3_Encode_kernel.cpp  BC3_Encode_kernel.h  BC3_Encode_kernel.hlsl  BC4_Encode_kernel.cpp  BC4_Encode_kernel.h  BC5_Encode_kernel.cpp  BC5_Encode_kernel.h  BC6_Encode_kernel.cpp  BC6_Encode_kernel.hlsl  BC7_Encode_kernel.cpp  BC7_Encode_kernel.h  BCn_Common_kernel.h  Common_Def.h
CMP_Core/source/: CMP_Core.h  cmp_math_func.h  cmp_math_vec4.h
CMP_Core/test/: BlockConstants.h  CMakeLists.txt  CompressonatorTests.cpp  CompressonatorTests.h  TestsMain.cpp
CMP_Framework/: CMP_Framework.h  CMakeLists.txt  Compute_Base.cpp  Compute_Base.h
CMP_Framework/Common/: CMP_BoxFilter.cpp  CMP_BoxFilter.h  CMP_MIPS.cpp  HDR_Encode.cpp  HDR_Encode.h  MathMacros.h
Compressonator/: .gitignore  CMakeLists.txt  CompressonatorLib.def  Compressonator_Root.props  GPU_DecodeLib.def
Compressonator/CMP_CompressonatorLib/: Common.h  Compress.cpp  Compressonator.cpp  Compressonator.h  Version.h
Compressonator/CMP_Core/: CMakeLists.txt
Compressonator/CMP_Framework/: CMP_Framework.def  Compute_Base.cpp  Compute_Base.h
Compressonator/Examples/: Compressonator_Test.cpp  Compressonator_Test_Helpers.cpp  Compressonator_Test_Helpers.h
Compressonator/Header/: Common.h  Compress.h  Compressonator.h  Compressonator_Documentation.h  MathMacros.h  Version.h
Compressonator/License/: CLILicense.txt  GUILicense.txt  Readme.txt
Compressonator/Linux/: makefile
Compressonator/Make/: CMakeLists.txt
Compressonator/RunTime/: BC6H_Compression.cprj  BC6H_Decompressed.cprj  BC7_Compression.cprj  example.bat
Compressonator/Source/: Compress.cpp  Compressonator.cpp
Compressonator/VS2013/: CompressonatorLib.sln  CompressonatorLib.vcxproj  CompressonatorLib.vcxproj.filters
Compressonator/VS2015/: CMP_MathLib.sln  CMP_MathLib.vcxproj  CMP_MathLib.vcxproj.filters  CMP_Mesh.sln  CMP_MeshCompressor.vcxproj  CMP_MeshCompressor.vcxproj.filters  CMP_MeshLib.vcxproj  CMP_MeshLib.vcxproj.filters  CMP_MeshOptimizer.vcxproj  CMP_MeshOptimizer.vcxproj.filters  CompressonatorLib.sln  CompressonatorLib.vcxproj  CompressonatorLib.vcxproj.filters  Compute_Lib.sln  Compute_Lib.vcxproj  Compute_Lib.vcxproj.filters  GPU_DecodeLib.sln  GPU_DecodeLib.vcxproj  GPU_DecodeLib.vcxproj.filters
cmp_compressonatorlib/: CMakeLists.txt  cmakelists.txt  common.h  compress.cpp  compressonator.cpp  compressonator.h  compressonatorlib.def  version.h
cmp_core/: CMakeLists.txt  cmakelists.txt  cmp_core.def
cmp_core/shaders/: bc1_cmp.h  (+40 more)
cmp_framework/: CMakeLists.txt  cmakelists.txt  cmp_framework.def  cmp_framework.h  compute_base.cpp  compute_base.h
cmp_unittests/: CMakeLists.txt  bc6h_tests.cpp  blockconstants.h  brlg_data.h  codec_tests.cpp  codecbuffer_tests.cpp  copyfiles.cmake  core_simd_tests.cpp  core_tests.cpp  core_tests.h  fileio_test.cpp  framework_tests.cpp  mipmap_tests.cpp  sdk_tests.cpp  test_constants.h  test_main.cpp
examples/: CMakeLists.txt  cmakelists.txt  readme.md
(+4562 files in other folders)
